# fre21_object_detection

./: .gitignore  0-Dataset-Visualization.ipynb  1-Training.ipynb  CMakeLists.txt  LICENSE  LICENSE.kamaro  README.md  gazebo_screenshot_dataset.py  package.xml
scripts/: fre21_object_detection_node.py
