<?xml version="1.0"?>
<package format="3">
  <name>fre_object_detection</name>
  <version>1.0.0</version>
  <description>
    This package contains the code used by Kamaro Engineering e.V. on the
    virtual Field Robot Event 2021 held from 08. to 10. June.
  </description>

  <maintainer email="mail@kamaro-engineering.de">Kamaro Engineering eV</maintainer>

  <license file="LICENSE">BSD 3-Clause</license>

  <url type="website">https://kamaro-engineering.de</url>
  <url type="github">https://github.com/Kamaro-Engineering</url>

  <author email="johannes.barthel@kamaro-engineering.de">Johannes Barthel</author>
  <author email="l.tuschla@gmail.com">Leon Tuschla</author>
  <author email="ralino96@gmail.com">Thomas Friedel</author>
  <author email="bierjou@gmail.com">Johannes Bier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
</package>
